--- a/_products/پیراهن دخترانه کد 6.md
+++ b/_products/پیراهن دخترانه کد 6.md
@@ -9,11 +9,11 @@ colors:
     code: "#FFB6C1"
     text_color: "#000"
 images:
-  - "images\code 6 -1.png"
-  - "images\code 6 -2.png"
-  - "images\code 6 -3.png"
-  - "images\code 6 -4.png"
-  - "images\code 6 -5.png"
+  - "images/code 6 -1.webp"
+  - "images/code 6 -2.webp"
+  - "images/code 6 -3.webp"
+  - "images/code 6 -4.webp"
+  - "images/code 6 -5.webp"
 features:
   - "بافتنی دستباف"
   - "نرم و راحت"
