--- a/_products/پیراهن دخترانه کد 6.md
+++ b/_products/پیراهن دخترانه کد 6.md
@@ -1,7 +1,9 @@
 ---
 title: پیراهن دخترانه کد 6
 description: توضیح کوتاه محصول
-category: sweaters, booties
+category:
+- sweaters
+- booties
 price: "برای اطلاع پیام دهید"
 sizes: ["6-12 ماه"]
 colors:
